--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "types": ["vite/client"]
   },
   "include": ["src", "vite.config.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/components/ui/**"]
 }
